--- a/study_app/style.css
+++ b/study_app/style.css
@@ -66,8 +66,15 @@ body, p, h1, input, button {
     display: none; /* Initially hidden */
   }
   #real_start_button{
-    background-color: rgb(255,255,255);
+    background-color: rgb(0,0,0,0);
     color:black;
+    
+  }
+  #real_start_button:hover{
+    background-color: rgb(0,0,0,0.03);
+  }
+  #real_start_button:active{
+    background-color: rgb(0,0,0,0.1);
   }
   /* Style the timer display */
   #timer_display {
@@ -117,6 +124,7 @@ body, p, h1, input, button {
     display: none; /* Initially hidden */
     padding: 20px;
     background-color: rgb(0,0,0,0);
+    color:black;
     
     border-radius: 5px;
     text-align: center;
