--- a/sonare/assets/css/noscript.css
+++ b/sonare/assets/css/noscript.css
@@ -4,15 +4,84 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
+:root {
+    --primary-color: #B3D374;
+    --secondary-color: #FFFAD2;
+    --accent-color: #FFA280;
+    --text-color: #333;
+    --light-bg: #f5f6fa;
+    --white: #ffffff;
+}
+
 /* Header */
+body {
+    background-color: var(--light-bg);
+    background-image: linear-gradient(135deg, var(--primary-color), var(--secondary-color));
+    color: var(--text-color);
+}
 
-	body.is-preload #header.alt > * {
-		opacity: 1;
-	}
+body.is-preload #header.alt > * {
+    opacity: 1;
+}
 
-	body.is-preload #header.alt .logo {
-		-moz-transform: none;
-		-webkit-transform: none;
-		-ms-transform: none;
-		transform: none;
-	}
+body.is-preload #header.alt .logo {
+    -moz-transform: none;
+    -webkit-transform: none;
+    -ms-transform: none;
+    transform: none;
+}
+
+/* Override template colors */
+#header {
+    background-color: var(--white);
+}
+
+#header h1 {
+    color: var(--primary-color);
+}
+
+#header p {
+    color: var(--text-color);
+}
+
+#nav {
+    background-color: var(--white);
+}
+
+#nav ul li a {
+    color: var(--text-color);
+}
+
+#nav ul li a:hover,
+#nav ul li a.active {
+    color: var(--primary-color);
+}
+
+.main {
+    background-color: var(--white);
+}
+
+.main .major h2 {
+    color: var(--primary-color);
+}
+
+.main .major h2:after {
+    background-color: var(--secondary-color);
+}
+
+.button {
+    background-color: var(--primary-color);
+    color: var(--white);
+}
+
+.button:hover {
+    background-color: var(--secondary-color);
+}
+
+.button.primary {
+    background-color: var(--accent-color);
+}
+
+.button.primary:hover {
+    background-color: var(--primary-color);
+}
